cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hamish Starling
maintainer:         hamishstarling@hotmail.co.uk

library
    exposed-modules: Common, Trie, String
    build-depends:    base ^>=4.14.3.0, containers
    hs-source-dirs:   lib
    default-language: Haskell2010

executable Day01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0,
                      adventofcode
    hs-source-dirs:   exe
    default-language: Haskell2010

executable Day02
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0,
                      adventofcode,
                      gigaparsec == 0.2.1.0
    hs-source-dirs:   exe
    default-language: Haskell2010
