cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hamish Starling
maintainer:         hamishstarling@hotmail.co.uk

library
    exposed-modules: Common, Trie, String, DList, Parsers, List
    build-depends:    base ^>=4.14.3.0, containers, array ^>= 0.5.4.0, gigaparsec == 0.2.1.0
    hs-source-dirs:   lib
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0,
                      adventofcode
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day02
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0,
                      adventofcode,
                      gigaparsec == 0.2.1.0
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day03
    main-is:          Day03.hs
    build-depends:    base ^>= 4.14.3.0,
                      adventofcode,
                      array ^>= 0.5.4.0,
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day04
    main-is:          Day04.hs
    build-depends:    base ^>= 4.14.3.0,
                      adventofcode,
                      gigaparsec == 0.2.1.0,
                      containers
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day05
    main-is:          Day05.hs
    build-depends:    base ^>= 4.14.3.0,
                      adventofcode,
                      gigaparsec == 0.2.1.0,
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day06
    main-is:          Day06.hs
    build-depends:    base ^>= 4.14.3.0,
                      adventofcode,
                      gigaparsec == 0.2.1.0,
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day07
    main-is:          Day07.hs
    build-depends:    base ^>= 4.14.3.0,
                      adventofcode,
                      gigaparsec == 0.2.1.0,
                      containers
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day09
    main-is:          Day09.hs
    build-depends:    base ^>= 4.14.3.0,
                      adventofcode,
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010

executable Day10
    main-is:          Day10.hs
    build-depends:    base ^>= 4.14.3.0,
                      adventofcode,
                      array ^>= 0.5.4.0,
                      containers
    hs-source-dirs:   exe
    ghc-options:      -Wall
    default-language: Haskell2010